--- a/2-introWeb/html/index.html
+++ b/2-introWeb/html/index.html
@@ -7,7 +7,7 @@
       <title>Mi primer página</title>
 </head>
 <body>
-      <h1>Encabezado 1</h1>
+      <h1>Página principal</h1>
 
       <h2>Encabezado 2</h2>
       <h3>Encabezado 3</h3>
@@ -17,16 +17,33 @@
 
       <hr/>
 
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur fugit excepturi optio eum repellat molestias iure eos expedita enim, ullam quas velit, similique necessitatibus numquam hic. Voluptatibus sit magni vero.</p>
+      <p id="parrafo1">1 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur fugit excepturi optio eum repellat molestias iure eos expedita enim, ullam quas velit, similique necessitatibus numquam hic. Voluptatibus sit magni vero.</p>
 
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur fugit excepturi optio eum repellat molestias iure eos expedita enim, ullam quas velit, similique necessitatibus numquam hic. Voluptatibus sit magni vero.</p>
+      <p id="parrafo2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur fugit excepturi optio eum repellat molestias iure eos expedita enim, ullam quas velit, similique necessitatibus numquam hic. Voluptatibus sit magni vero.</p>
+
+      <p id="parrafo3">3 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur fugit excepturi optio eum repellat molestias iure eos expedita enim, ullam quas velit, similique necessitatibus numquam hic. Voluptatibus sit magni vero.</p>
+
+      <p id="parrafo4"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur fugit excepturi optio eum repellat molestias iure eos expedita enim, ullam quas velit, similique necessitatibus numquam hic. Voluptatibus sit magni vero.</p>
 
       <hr>
 
       <!-- Enlaces -->
       <a href="https://www.google.com/" target="_blank">Este es un enlace</a>
+      
+      <br>
+      
+      <a href="mailto:raul@gmail.com">Enviar correo</a>
 
       <br>
+
+      <a href="tel:+52555555698">Llamar</a>
+
+      <br>
+      <a href="assets/pages/pagina2.html">Ir a página 2</a>
+      <br>
+      <a href="#parrafo1">Ir a párrafo 1</a>
+      <br>
+      <a href="#parrafo3">Ir a párrafo 3</a>
       <br>
       <br>
       <br>
@@ -36,7 +53,6 @@
       <br>
       <br>
       <br>
-      <br>
-      <br>
+      <h2>Final de la página</h2>
 </body>
 </html>
